--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@apollo/client": "^3.3.20",
     "@material-ui/core": "^4.11.4",
+    "@material-ui/lab": "^4.0.0-alpha.60",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
@@ -13,6 +14,7 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-swipeable-views": "^0.14.0",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
@@ -41,6 +43,7 @@
   },
   "devDependencies": {
     "@material-ui/icons": "^4.11.2",
-    "clsx": "^1.1.1"
+    "clsx": "^1.1.1",
+    "prop-types": "^15.7.2"
   }
 }
