--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-swipeable-views": "^0.14.0",
-    "web-vitals": "^1.1.2"
+    "web-vitals": "^1.1.2",
+    "xtypejs": "^0.7.1"
   },
   "scripts": {
     "start": "react-scripts start",
