--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
   "devDependencies": {
     "@material-ui/icons": "^4.11.2",
     "clsx": "^1.1.1",
-    "prop-types": "^15.7.2"
+    "prop-types": "^15.7.2",
+    "react-player": "^2.9.0"
   }
 }
