--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "dependencies": {
     "@apollo/client": "^3.3.20",
+    "@emotion/react": "^11.4.1",
+    "@emotion/styled": "^11.3.0",
     "@material-ui/core": "^4.11.4",
     "@material-ui/lab": "^4.0.0-alpha.60",
     "@testing-library/jest-dom": "^5.14.1",
@@ -46,6 +48,7 @@
   },
   "devDependencies": {
     "@material-ui/icons": "^4.11.2",
+    "@mui/material": "^5.0.2",
     "clsx": "^1.1.1",
     "prop-types": "^15.7.2",
     "react-player": "^2.9.0"
