--- a/package.json
+++ b/package.json
@@ -8,14 +8,19 @@
     "@emotion/styled": "^11.3.0",
     "@material-ui/core": "^4.11.4",
     "@material-ui/lab": "^4.0.0-alpha.60",
+    "@mui/icons-material": "^5.1.0",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "@widgetbot/crate": "^3.3.0",
+    "@widgetbot/embed-api": "^1.1.3",
     "graphql": "^15.5.0",
+    "pure-react-carousel": "^1.27.6",
     "react": "^17.0.2",
     "react-cookie": "^4.1.1",
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
+    "react-responsive-carousel": "^3.2.22",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-swipeable-views": "^0.14.0",
@@ -49,6 +54,7 @@
   "devDependencies": {
     "@material-ui/icons": "^4.11.2",
     "@mui/material": "^5.0.2",
+    "@widgetbot/react-embed": "^1.4.0",
     "clsx": "^1.1.1",
     "prop-types": "^15.7.2",
     "react-player": "^2.9.0"
