--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@material-ui/core": "^4.11.4",
     "@material-ui/lab": "^4.0.0-alpha.60",
     "@mui/icons-material": "^5.1.0",
+    "@mui/x-data-grid": "^5.0.0",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
@@ -17,6 +18,7 @@
     "graphql": "^15.5.0",
     "pure-react-carousel": "^1.27.6",
     "react": "^17.0.2",
+    "react-alice-carousel": "^2.5.1",
     "react-cookie": "^4.1.1",
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
