--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "react-icons": "^4.2.0",
     "react-responsive-carousel": "^3.2.22",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^3.4.4",
     "react-swipeable-views": "^0.14.0",
     "web-vitals": "^1.1.2",
     "xtypejs": "^0.7.1"
