--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -23,4 +23,4 @@ jobs:
         cache: 'npm'
     - run: npm install
     - run: npm run build --if-present
-    - run: cp /root/actions-runner/app/eterelz-front/eterelz-front /var/www/html/rubycouz.xyz/
+    - run: cp -r /root/actions-runner/app/eterelz-front/eterelz-front /var/www/html/rubycouz.xyz/
