--- a/package.json
+++ b/package.json
@@ -6,6 +6,10 @@
     "@apollo/client": "^3.3.20",
     "@emotion/react": "^11.4.1",
     "@emotion/styled": "^11.3.0",
+    "@fortawesome/fontawesome-free": "^5.15.4",
+    "@fortawesome/fontawesome-svg-core": "^1.2.36",
+    "@fortawesome/free-solid-svg-icons": "^5.15.4",
+    "@fortawesome/react-fontawesome": "^0.1.16",
     "@material-ui/core": "^4.11.4",
     "@material-ui/lab": "^4.0.0-alpha.60",
     "@mui/icons-material": "^5.1.0",
@@ -15,6 +19,7 @@
     "@testing-library/user-event": "^12.8.3",
     "@widgetbot/crate": "^3.3.0",
     "@widgetbot/embed-api": "^1.1.3",
+    "font-awesome": "^4.7.0",
     "graphql": "^15.5.0",
     "pure-react-carousel": "^1.27.6",
     "react": "^17.0.2",
@@ -54,6 +59,7 @@
     ]
   },
   "devDependencies": {
+    "@fortawesome/free-brands-svg-icons": "^5.15.4",
     "@material-ui/icons": "^4.11.2",
     "@mui/material": "^5.0.2",
     "@widgetbot/react-embed": "^1.4.0",
