--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@testing-library/user-event": "^12.8.3",
     "@widgetbot/crate": "^3.3.0",
     "@widgetbot/embed-api": "^1.1.3",
+    "animate.css": "^4.1.1",
     "font-awesome": "^4.7.0",
     "graphql": "^15.5.0",
     "pure-react-carousel": "^1.27.6",
