--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "@mui/material": "^5.0.2",
     "@widgetbot/react-embed": "^1.4.0",
     "clsx": "^1.1.1",
+    "eslint-plugin-react-hooks": "^1.7.0",
     "prop-types": "^15.7.2",
     "react-player": "^2.9.0"
   }
