--- a/package.json
+++ b/package.json
@@ -22,11 +22,14 @@
     "@widgetbot/embed-api": "^1.1.3",
     "animate.css": "^4.1.1",
     "apollo-server-errors": "^3.3.0",
+    "date-fns": "^2.28.0",
     "font-awesome": "^4.7.0",
     "graphql": "^15.8.0",
+    "moment": "^2.29.1",
     "pure-react-carousel": "^1.27.6",
     "react": "^17.0.2",
     "react-alice-carousel": "^2.5.1",
+    "react-big-calendar": "^0.38.2",
     "react-cookie": "^4.1.1",
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
