--- a/package.json
+++ b/package.json
@@ -11,9 +11,8 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.36",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@fortawesome/react-fontawesome": "^0.1.16",
-    "@material-ui/core": "^4.11.4",
-    "@material-ui/lab": "^4.0.0-alpha.60",
     "@mui/icons-material": "^5.1.0",
+    "@mui/styles": "^5.2.3",
     "@mui/x-data-grid": "^5.0.0",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
@@ -66,7 +65,6 @@
   },
   "devDependencies": {
     "@fortawesome/free-brands-svg-icons": "^5.15.4",
-    "@material-ui/icons": "^4.11.2",
     "@mui/lab": "^5.0.0-alpha.61",
     "@mui/material": "^5.0.2",
     "@widgetbot/react-embed": "^1.4.0",
