--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-alice-carousel": "^2.5.1",
     "react-big-calendar": "^0.38.2",
     "react-cookie": "^4.1.1",
+    "react-countup": "^6.1.0",
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
     "react-icons": "^4.2.0",
