--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -22,8 +22,8 @@ jobs:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
     - run: touch src/config.js
-    - run: echo "exports.HOST = 'https://rubycouz.cc'
-                 exports.SOCKET_HOST = 'wss://rubycouz.cc'" > src/config.js
+    - run: echo "exports.HOST = 'https://rubycouz.cc;'
+                 exports.SOCKET_HOST = 'wss://rubycouz.cc;'" > src/config.js
     - run: npm install
     - run: npm run build --if-present
     - run: cp -r /root/actions-runner-app/app/eterelz-front/eterelz-front/build/* /var/www/rubycouz.cc/html/
