--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -23,7 +23,7 @@ jobs:
         cache: 'npm'
     - run: touch src/config.js
     - run: echo "exports.HOST = 'https://rubycouz.cc';
-                 exports.SOCKET_HOST = 'wss://rubycouz.cc;'" > src/config.js
+                 exports.SOCKET_HOST = 'wss://rubycouz.cc';" > src/config.js
     - run: npm install
     - run: npm run build --if-present
     - run: cp -r /root/actions-runner-app/app/eterelz-front/eterelz-front/build/* /var/www/rubycouz.cc/html/
